src/main/metadata/objects/Customer_Key_Credential__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_with_bank__c</fullName>
        <label>Account Name (with bank)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Seq__c</fullName>
        <label>Account Seq</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPID__c</fullName>
        <label>BPID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Reg_No__c</fullName>
        <label>Bank Reg. No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Key_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Composite_Bank_Identifier__c</fullName>
        <formula>BPID__c+"-"+Account_Seq__c+"-"+FS_Contract__r.External_Contract_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Bank Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_bank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defualt - bank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup contract based on external contract number</description>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>Bank Details</relationshipLabel>
        <relationshipName>Bank_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Key_Credentials2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>ID Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <label>ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ID Card/Driving Card</fullName>
                </value>
                <value>
                    <fullName>Officer Card</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>National ID</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH',
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'MY'), 'MY',
IF(ISPICKVAL($User.Market__c, 'NZ'), 'NZ',
IF(ISPICKVAL($User.Market__c, 'IN'), 'IN',
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR','NA'))))))))</defaultValue>
        <label>Market discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH', 
IF(ISPICKVAL($User.Market__c, 'MY'), 'MY', 
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR',''))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_No__c</fullName>
        <label>Passport No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_FS_Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail FS Borrower</label>
        <referenceTo>Account_Link__c</referenceTo>
        <relationshipName>Customer_Key_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_FS_Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail FS Guarantor</label>
        <referenceTo>Account_Link__c</referenceTo>
        <relationshipName>Customer_Key_Credentials2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bank Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD-{00000}</displayFormat>
        <label>Bank Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>